# trmnl-agent-usage-dashboards

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-reference.md  deployment.md  templates.md
examples/: claude.sample.json  codex.sample.json  env.example
scripts/: audit_public_repo.py  claude_statusline_capture_wrapper.sh
templates/: agent-usage-dashboard-bwr-half-horizontal.liquid  agent-usage-dashboard-bwr-half-vertical.liquid  agent-usage-dashboard-bwr-quadrant.liquid  agent-usage-dashboard-bwr.liquid  agent-usage-dashboard.liquid
tests/: __init__.py  test_public_repo_audit.py  test_usage_feeds.py
trmnl_agent_usage/: __init__.py  capture_claude_statusline.py  collect_usage_feeds.py  push_usage_feeds.py  serve_usage_feeds.py
